# kaggleX-challenge

./: README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: submission.csv
notebooks/: 00_data_ingestion_and_cleaning.ipynb
