[tool.poetry]
name = "kagglex-challenge"
version = "0.1.0"
description = "A challenge for acceptance into the kaggleX fellowship programme"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
optuna = "^3.6.1"
lightgbm = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
